<package>
  <name>rosbaxter</name>
  <version>0.0.1</version>
  <description>ROS interface to baxter</description>
  <maintainer email="gens@gowestrobotics.com">Gerry Ens</maintainer>
  <license>BSD</license>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
</package>
